--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.7.63",
+  "version": "1.7.64",
   "name": "Skye New Tab",
   "short_name": "Skye New Tab",
   "description": "Replace your new tab page with a more modern page! Featuring time, dates, many background images, welcome messages and more!",
@@ -8,6 +8,7 @@
   "offline_enabled": true,
   "homepage_url": "http://benandy.github.io/skye",
   "incognito": "split",
+  "minimum_chrome_version": "47.0.2526.106",
   "background": {
     "scripts": ["background.js"]
   },
@@ -22,6 +23,7 @@
   },
   "permissions": [
     "cookies",
+    "unlimitedStorage",
     "*://benandy.github.io/"
   ]
 }
