--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.9.72",
+  "version": "1.9.73",
   "name": "Skye New Tab",
   "short_name": "Skye New Tab",
   "description": "Replace your new tab page with a more modern page! Featuring time, dates, many background images, welcome messages and more!",
@@ -21,6 +21,6 @@
   "permissions": [
     "cookies",
     "unlimitedStorage",
-    "*://benandy.github.io/"
+    "*://benandy.github.io/*"
   ]
 }
