--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "version": "2.14.169",
+  "version": "2.14.170",
   "name": "Skye New Tab",
   "short_name": "Skye New Tab",
   "description": "Replace your new tab page with a more modern page! Featuring time, dates, many background images, welcome messages and more!",
@@ -8,7 +8,7 @@
   "offline_enabled": true,
   "homepage_url": "https://benandy.github.io/skye",
   "incognito": "split",
-  "content_security_policy": "default-src 'self'; script-src 'self' https://benandy.github.io 'sha256-L50E3FZTH+qUfRLPgQ2uOeSsf0LiuK9XS7QZuoNoX0w=' 'sha256-20z+7q8HyetC3+aizmJ64n65p0eObX+f6mBY5WtHy9o='; style-src 'self' https://benandy.github.io; img-src 'self' http://www.google.com; font-src https://fonts.gstatic.com; sandbox allow-forms allow-scripts allow-same-origin",
+  "content_security_policy": "default-src 'self'; script-src 'self' https://benandy.github.io 'sha256-L50E3FZTH+qUfRLPgQ2uOeSsf0LiuK9XS7QZuoNoX0w=' 'sha256-20z+7q8HyetC3+aizmJ64n65p0eObX+f6mBY5WtHy9o=' 'sha256-gtWI+QKNgFNitrRjtO4FMMtjswIRSSEukir/J8SGoWk='; style-src 'self' https://benandy.github.io; img-src 'self' http://www.google.com; font-src https://fonts.gstatic.com; sandbox allow-forms allow-scripts allow-same-origin allow-modals",
   "icons": {
     "128": "assets/images/favicon128x128.png"
   },
