--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "version": "2.15.209",
+  "version": "2.15.210",
   "name": "Skye New Tab",
   "short_name": "Skye New Tab",
   "description": "Replace your new tab page with a more modern page! Featuring time, dates, many background images, welcome messages and more!",
@@ -14,7 +14,7 @@
     "128": "assets/images/favicon128x128.png"
   },
   "chrome_url_overrides": {
-    "newtab": "index.html"
+    "newtab": "extensionindex.html"
   },
   "permissions": [
     "cookies",
